# Hvv-case-study-backend

./: .env.influxdb2-admin-token  .gitignore  README.md  compose.yaml
.github/workflows/: ci-pipeline-dev.yml
app/: Dockerfile  pyproject.toml
app/src/: database_adapter.py  main.py  utils.py
app/test/: test_database_adapter.py
data/: import_data.py
